[package]
build = "build.rs"
name = "tvm_tools"
version = "0.1.0"

[dependencies]
ton_labs_assembler = { git = "https://github.com/nilfoundation/tvm-asm.git", branch = "1-vergrth16" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_vm = { git = "https://github.com/nifoundation/rust-tvm.git", branch = "1-vergrth16-tvm-instruction" }

clap = "2.32"
hex = "0.3.2"
log = "0.4.6"
zip = "0.5.3"
